Update the self-pic position and try

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="content-wrapper">
-  <div class="text-content">
-  <h1>About Me</h1>
+  <h1>About Me <img src="../static/1688603227577.jpeg" style="float: right; width: 10%; margin-left: 15px; margin-right: 388px"></h1>
   <ul class="rocketul">
     <li class="rocketli">Recently graduated with a Master's Degree in Computer Engineering from the University of Toronto.</li>
     <li class="rocketli">Lead development projects utilizing Java, Python, JavaScript, and AWS cloud services. </li>
@@ -47,7 +45,4 @@
 <!--    <button type="submit">Send Message</button>-->
 <!--  </form>-->
   </section>
-  <img src="../static/1688603227577.jpeg" alt="Jiawei Ma's Photo" class="profile-photo">
-    </div>
-  </div>
 {% endblock %}
