--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="content-wrapper">
-  <div class="text-content">
   <h2>Welcome to my portfolio!</h2>
   <p>
     &#128075;Hello! I'm Jiawei Ma, a software engineer specializing in designing and developing scalable
-    backend systems.
+    backend systems. <img src="../static/1688603227577.jpeg" style="float: right; width: 15%; margin-left: 15px; margin-right: 388px">
   </p>
 
   <p>
@@ -38,7 +36,4 @@
     &#128170;I'm passionate about crafting robust backend solutions using my strong programming foundation
     and cloud architecture knowledge. Let's connect!
   </p>
-    <img src="../static/1688603227577.jpeg" alt="Jiawei Ma's Photo" class="profile-photo">
-    </div>
-  </div>
 {% endblock %}
